syntax = "proto3";

option csharp_namespace = "GRPCService";

package serverstream;

service ServerStream {
  rpc GetServerStream (Test) returns (stream Test);
}

message Test {
	string testMessage = 1;
	int32 randomNumber = 2;
}